--- a/src/views/tarefas/search-result.ejs
+++ b/src/views/tarefas/search-result.ejs
@@ -24,7 +24,7 @@
         <% imoveis.forEach(function (imovel) { %>
         <tr>
           <td><%= imovel.rua %></td>
-          <td><%= imovel.cidade %></td>
+          <td><%= imovel.concluida %></td>
           <td><%= imovel.estado %></td>
           <td><%= imovel.numero %></td>
           <td><%= imovel.tipo %></td>
