--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,24 +2,114 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-input {
-  padding: 5px;
+body{
+  margin: 0;
 }
 
-button {
-  padding: 5px;
+.board{
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  background: linear-gradient(0deg,#151F32 0,#18273F 100%);
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 15px;
+}
+.board-top{
+  height: 30%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.board-bot{
+  width: 100%;
+  height: 70%;
+  display: flex;
+  gap: 15px;
+}
+.concluidos,
+.n-concluidos{
+  width: 50%;
+  height: 100%;
+  border-radius: 12px;
+  padding: 12px;
+  background: #203556;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.single-tarefa{
+  width: 100%;
+  height:auto;
+  min-height: 75px;
+  padding: 8px 8px 4px 12px;
+  border-radius: 12px;
+  background-color: #2d5278;
+  display: flex;
+  flex-direction: column;
+  color: #FFF;
+  font-weight: 900;
+  justify-content: space-between;
+  position: relative;
+}
+.check-div{
+  display: flex;
+  width: auto;
+  position: relative;
+  margin-right: 0;
+  margin-left: auto;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
 }
 
-thead tr {
-  background-color: #ccc;
+.delete-div{
+  position: absolute;    
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 0;
+  margin-right: 8px;
+  gap: 10px;
 }
-
-tr:nth-child(even) {
-  background-color: #f2f2f2;
+.tarefa-name{
+  max-width: 350px;
 }
-
-th, td {
-  font-family: monospace;
-  padding: 5px;
+.add-tarefa{
+  width: 100%;
+  display: flex;
+  padding: 12px;
+  border-radius: 12px;
+  background-color: #2d5278;
+  display: flex;
+  color: #FFF;
+  font-weight: 900;
+  position: relative;
+  gap: 20px;
+}
+.add-form{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.add-form input{
+  padding: 5;
+}
+.delete-tarefa{
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  background-color: #38739b;
+  height: 25px;
+  border-radius: 5px;
+}
+h1{
+  color: #FFF;
+}
+.mini-title{
+  color: #FFF;
+  font-weight: 900;
 }
